--- a/pub_list.html
+++ b/pub_list.html
@@ -716,55 +716,55 @@
                     division: '',
                     depth1:'커뮤니티 - 공지사항 - 상세',
                     path:'./portal/html/USR-1335-B-DTL.html',
-                    date:'',
+                    date:'2022-10-18',
                     mdate:'',
-                    con:'작업중',
-                    etc:'<span class="red">기획서 없음</span>[게시판 타입1 - 상세]'
+                    con:'완료',
+                    etc:'[게시판 타입1 - 상세]'
                 },
                 {
                     division: '',
                     depth1:'커뮤니티 - 공지사항 - 등록/수정',
                     path:'./portal/html/USR-1335-B-FORM.html',
-                    date:'',
+                    date:'2022-10-18',
                     mdate:'',
-                    con:'작업중',
-                    etc:'<span class="red">기획서 없음</span>[게시판 타입1 - 등록/수정]'
+                    con:'완료',
+                    etc:'[게시판 타입1 - 등록/수정]'
                 },
                 {
                     division: '',
                     depth1:'커뮤니티 - 자유게시판 - 상세',
                     path:'./portal/html/USR-1336-B-DTL.html',
-                    date:'',
+                    date:'2022-10-18',
                     mdate:'',
-                    con:'작업중',
-                    etc:'<span class="red">기획서 없음</span>[게시판 타입1 - 상세]'
+                    con:'완료',
+                    etc:'[게시판 타입1 - 상세]'
                 },
                 {
                     division: '',
                     depth1:'커뮤니티 - 자유게시판 - 등록/수정',
                     path:'./portal/html/USR-1336-B-FORM.html',
-                    date:'',
+                    date:'2022-10-18',
                     mdate:'',
-                    con:'작업중',
-                    etc:'<span class="red">기획서 없음</span>[게시판 타입1 - 등록/수정]'
+                    con:'완료',
+                    etc:'[게시판 타입1 - 등록/수정]'
                 },
                 {
                     division: '',
                     depth1:'커뮤니티 - 일정알림 - 상세',
                     path:'./portal/html/USR-1337-B-DTL.html',
-                    date:'',
+                    date:'2022-10-18',
                     mdate:'',
-                    con:'작업중',
-                    etc:'<span class="red">기획서 없음</span>[게시판 타입1 - 상세]'
+                    con:'완료',
+                    etc:'[게시판 타입1 - 상세]'
                 },
                 {
                     division: '',
                     depth1:'커뮤니티 - 일정알림 - 등록/수정',
                     path:'./portal/html/USR-1337-B-FORM.html',
-                    date:'',
+                    date:'2022-10-18',
                     mdate:'',
-                    con:'작업중',
-                    etc:'<span class="red">기획서 없음</span>[게시판 타입1 - 등록/수정]'
+                    con:'완료',
+                    etc:'[게시판 타입1 - 등록/수정]'
                 },
                 {
                     division: '',
@@ -973,7 +973,7 @@
                     path:'./portal/html/USR-2044-F-LIST.html',
                     date:'2022-09-13',
                     mdate:'2022-11-17',
-                    con:'완료',                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
