--- a/portal/html/USR-2044-F-LIST.html
+++ b/portal/html/USR-2044-F-LIST.html
@@ -357,7 +357,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -391,7 +391,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -425,7 +425,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -459,7 +459,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -493,7 +493,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -527,7 +527,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -561,7 +561,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -572,7 +572,7 @@
 
                             <div class="btn_state_box">
                                 <!-- <button class="btn_gray">전체선택</button> -->
-                                <button class="btn_gray">삭제</button>
+                                <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                             </div>
 
                         </div>
@@ -609,7 +609,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -640,7 +640,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -671,7 +671,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -702,7 +702,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -733,7 +733,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -764,7 +764,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -795,7 +795,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="btn_box">
-                                                        <button class="btn_gray">삭제</button>
+                                                        <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -806,7 +806,7 @@
 
                             <div class="btn_state_box">
                                 <!-- <button class="btn_gray">전체선택</button> -->
-                                <button class="btn_gray">삭제</button>
+                                <button class="btn_gray dialog-link" data-target="#alpop_03">삭제</button>
                             </div>
 
                         </div>
@@ -935,5 +935,29 @@
     </div>
 
 </div>
+
+<!-- 경고팝업 3 -->
+<div id="alpop_03" class="dialog alpop_box">
+
+    <div class="pop_header">
+        <span class="img3"></span>
+    </div>
+
+    <div class="pop_content">
+        받은쪽지를 삭제하시겠습니까?
+    </div>
+
+    <div class="pop_footer">
+        <div class="btn_box">
+            <button class="btn_gray pop_close">취소</button>
+            <button class="btn_mint" onclick="onShowToast('받은 쪽지가 삭제되었습니다.');">확인</button>
+        </div>
+    </div>
+
+</div>
+
+<!-- 토스트 메세지 -->
+<div class="toast_box"><div class="txt"></div></div>
+
 </body>
 </html>
