포털소개 수정 / 로고수정

--- a/portal/html/USR-1310-H-CONTN.html
+++ b/portal/html/USR-1310-H-CONTN.html
@@ -364,15 +364,18 @@
                         </div>
                         <div class="design_box">
                             <div class="design_name">
-                                <span>V</span>enture investment <span>C</span>omprehensive portal <span>S</span>ystem
+                                <span>V</span>enture investment <span>C</span>omprehensive portal <span>S</span>ervice
                             </div>
                         </div>
                         <div class="design_ci">
-                            <div class="img"><img src="../images/logo_b.png" alt="ci 이미지"></div>
+                            <div class="img"><img src="../images/logo/logo_type_01_b.png" alt="ci 이미지"></div>
+                            <div class="img"><img src="../images/logo/logo_type_02_b.png" alt="ci 이미지"></div>
+                            <div class="img"><img src="../images/logo/logo_type_03_b.png" alt="ci 이미지"></div>
                             <div class="btn_box bg">
-                                <a href="" class="download" download>벤처투자포털 CI 다운로드</a>
+                                <a href="../images/logo/logo.zip" class="download" download>벤처투자포털 CI 다운로드</a>
                             </div>
                         </div>
+                        <!-- 1019 김종윤부장님 요청으로 인한 삭제 
                         <div class="design_color">
                             <ul>
                                 <li>색상설명</li>
@@ -380,7 +383,7 @@
                                 <li>색상설명</li>
                                 <li>색상설명</li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
