메인 수정 및 커뮤니티 탭메뉴 수정

--- a/portal/html/USR-1310-H-CONTN.html
+++ b/portal/html/USR-1310-H-CONTN.html
@@ -368,11 +368,11 @@
                             </div>
                         </div>
                         <div class="design_ci">
-                            <div class="img"><img src="../images/logo/logo_type_01_b.png" alt="ci 이미지"></div>
-                            <div class="img"><img src="../images/logo/logo_type_02_b.png" alt="ci 이미지"></div>
-                            <div class="img"><img src="../images/logo/logo_type_03_b.png" alt="ci 이미지"></div>
+                            <div class="img"><img src="../images/logo/logo_type_01_b.png" alt="BI 이미지"></div>
+                            <div class="img"><img src="../images/logo/logo_type_02_b.png" alt="BI 이미지"></div>
+                            <div class="img"><img src="../images/logo/logo_type_03_b.png" alt="BI 이미지"></div>
                             <div class="btn_box bg">
-                                <a href="../images/logo/logo.zip" class="download" download>벤처투자포털 CI 다운로드</a>
+                                <a href="../images/logo/logo.zip" class="download" download>벤처투자종합포털 BI 다운로드</a>
                             </div>
                         </div>
                         <!-- 1019 김종윤부장님 요청으로 인한 삭제 
