투자유치검색 체크박스 on/off 수정

--- a/portal/html/USR-1010-F-LIST.html
+++ b/portal/html/USR-1010-F-LIST.html
@@ -512,23 +512,96 @@
 
                     <ul class="chk_list type_03">
                         <li>
-                            <div class="chk_box">
+                            <div class="chk_box chk_list_more_btn">
                                 <span>
                                     <input type="checkbox" id="chk_39">
                                     <label for="chk_39">전체</label>
                                 </span>
                                 <span>
-                                    <input type="checkbox" id="chk_40">
-                                    <label for="chk_40">수도권</label>
+                                    <input type="checkbox" id="chk_401">
+                                    <label for="chk_401">수도권</label>
                                 </span>
                                 <span>
-                                    <input type="checkbox" id="chk_41">
-                                    <label for="chk_41">5대 광역시</label>
+                                    <input type="checkbox" id="chk_411">
+                                    <label for="chk_411">5대 광역시</label>
                                 </span>
                                 <span>
-                                    <input type="checkbox" id="chk_42">
-                                    <label for="chk_42">그 외 지방</label>
+                                    <input type="checkbox" id="chk_421">
+                                    <label for="chk_421">그 외 지방</label>
                                 </span>
+                            </div>
+                            
+                            <div class="chk_list_more">
+                                <div class="chk_box">
+                                    <span>
+                                        <input type="checkbox" id="chk_40">
+                                        <label for="chk_40">서울</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_41">
+                                        <label for="chk_41">부산</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_42">
+                                        <label for="chk_42">대구</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_43">
+                                        <label for="chk_43">인천</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_44">
+                                        <label for="chk_44">광주</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_45">
+                                        <label for="chk_45">대전</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_46">
+                                        <label for="chk_46">울산</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_47">
+                                        <label for="chk_47">강원</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_48">
+                                        <label for="chk_48">경기</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_49">
+                                        <label for="chk_49">경남</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_50">
+                                        <label for="chk_50">경북</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_51">
+                                        <label for="chk_51">전남</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_52">
+                                        <label for="chk_52">전북</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_53">
+                                        <label for="chk_53">제주</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_54">
+                                        <label for="chk_54">충남</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_55">
+                                        <label for="chk_55">세종</label>
+                                    </span>
+                                    <span>
+                                        <input type="checkbox" id="chk_56">
+                                        <label for="chk_56">기타/해외</label>
+                                    </span>
+                                </div>
                             </div>
                         </li>
                     </ul>
